hero section image overflow fixed

--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding-bottom: 44px;
 }
 
 .hero-section__image-container {
@@ -65,6 +66,7 @@
 
 @media (min-width: $screen--lg) {
   .hero-section {
+    padding: 30px 0 35px 0;
     flex-direction: row;
     overflow-x: unset;
     align-items: center;
